# TDK_ros

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  reminder.txt
install/: local_setup.sh  setup.sh
install/SerialTest/lib/SerialTest/: control_node  motor_serial_node  other_serial_node  serial_node
install/SerialTest/share/SerialTest/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera/include/camera/: cameraBackground.hpp
install/camera/lib/camera/: cameraCoffee2  cameraDesk2  cameraDesk2_test  cameraStage3
install/camera/share/ament_index/resource_index/parent_prefix_path/: camera
install/camera/share/camera/: local_setup.sh  package.sh
install/mainspace/include/mainspace/: navigator.hpp
install/mainspace/include/mainspace/mainspace/msg/: coffee.h  coffee.hpp  command.h  csv_file.h  encoder_speed.h  pause.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  to_stm_speed.hpp
install/mainspace/include/mainspace/mainspace/msg/detail/: coffee__builder.hpp  coffee__functions.c  coffee__rosidl_typesupport_introspection_cpp.hpp  coffee__struct.h  coffee__struct.hpp  command__builder.hpp  command__functions.c  command__functions.h  command__struct.h  command__struct.hpp  command__traits.hpp  command__type_support.cpp  command__type_support.h  csv_file__rosidl_typesupport_fastrtps_c.h  csv_file__rosidl_typesupport_fastrtps_cpp.hpp  csv_file__rosidl_typesupport_introspection_c.h  csv_file__rosidl_typesupport_introspection_cpp.hpp  csv_file__struct.hpp  csv_file__traits.hpp  csv_file__type_support.c  csv_file__type_support.cpp  csv_file__type_support.h  desk__functions.c  desk__rosidl_typesupport_fastrtps_cpp.hpp  desk__rosidl_typesupport_introspection_c.h  desk__traits.hpp  desk__type_support.cpp  desk__type_support.h  encoder_speed__builder.hpp  encoder_speed__functions.h  encoder_speed__rosidl_typesupport_fastrtps_c.h  encoder_speed__rosidl_typesupport_introspection_c.h  encoder_speed__struct.hpp  encoder_speed__type_support.c  encoder_speed__type_support.cpp  encoder_speed__type_support.h  pause__functions.c  pause__functions.h  pause__rosidl_typesupport_fastrtps_cpp.hpp  pause__rosidl_typesupport_introspection_c.h  (+20 more)
install/mainspace/lib/mainspace/: Stage3  Stage4  navigator_main
install/mainspace/local/lib/python3.10/dist-packages/mainspace/: _mainspace_s.ep.rosidl_typesupport_c.c  _mainspace_s.ep.rosidl_typesupport_fastrtps_c.c
install/mainspace/local/lib/python3.10/dist-packages/mainspace/msg/: __init__.py  _coffee_s.c  _encoder_speed.py  _pause_s.c
install/mainspace/share/ament_index/resource_index/package_run_dependencies/: mainspace
install/mainspace/share/ament_index/resource_index/rosidl_interfaces/: mainspace
install/mainspace/share/mainspace/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mainspace/share/mainspace/Stage2Path_csv/: coffee2.csv  coffee3.csv
install/mainspace/share/mainspace/cmake/: ament_cmake_export_libraries-extras.cmake  export_mainspace__rosidl_generator_cppExport.cmake  export_mainspace__rosidl_generator_pyExport.cmake  export_mainspace__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  mainspaceConfig.cmake  mainspace__rosidl_typesupport_cExport-noconfig.cmake  mainspace__rosidl_typesupport_cExport.cmake  mainspace__rosidl_typesupport_cppExport.cmake  mainspace__rosidl_typesupport_introspection_cExport-noconfig.cmake  mainspace__rosidl_typesupport_introspection_cppExport-noconfig.cmake  mainspace__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/mainspace/share/mainspace/launch/: mainNodes.launch.py  rviz.launch.py
install/mainspace/share/mainspace/msg/: Coffee.msg  Command.idl  CsvFile.idl  Pause.idl
log/: latest_build
src/SerialTest/: package.xml  setup.cfg  setup.py
src/SerialTest/SerialTest/: control_node.py  mission_serial_node.py  motor_serial_node.py  other_serial_node.py  serial_node.py
src/camera/: CMakeLists.txt  package.xml
src/camera/include/camera/: cameraBackground.hpp
src/camera/src/: cameraBackground.cpp  cameraCoffee2.cpp  cameraCoffee2_test.cpp  cameraDesk2.cpp  cameraDesk2_test.cpp  cameraStage2.cpp  cameraStage3.cpp  cameraTest.cpp
src/mainspace/: CMakeLists.txt  package.xml
src/mainspace/MainPath_csv/: Stage2.csv  Stage3.csv  Stage4.csv
src/mainspace/Stage2Path_csv/: coffee1.csv  coffee4.csv  desk1.csv  desk2.csv  desk3.csv  desk4.csv
src/mainspace/Stage2Path_easy_csv/: coffee1.csv  coffee2.csv  coffee3.csv  coffee4.csv
src/mainspace/action/: NavigateTo.action
src/mainspace/launch/: mainNodes.launch.py
src/mainspace/msg/: Coffee.msg  Command.msg  ToStmSpeed.msg
src/mainspace/rviz/: BasePosition.rviz
src/mainspace/src/: Stage2.cpp  Stage3.cpp  Stage4.cpp  StageManager.cpp  navigator.cpp  navigator_main.cpp
